--- a/src/layout.css
+++ b/src/layout.css
@@ -232,6 +232,30 @@ width: 40%;
     height: 45px;    
 }
 
+.box2 {
+    text-align: center;
+    color: #FFF;
+    background-color: transparent;
+    border-top: transparent;
+    border-bottom: transparent;
+    border-right: transparent;
+    border-left: transparent;
+    width: 300px;
+    height: 75px;    
+}
+
+.box3 {
+    text-align: center;
+    color: #FFF;
+    background-color: transparent;
+    border-top: transparent;
+    border-bottom: transparent;
+    border-right: transparent;
+    border-left: transparent;
+    width: 100px;
+    height: 45px;    
+}
+
 
 
 /* for decorating error messages */
