full functionality for Customer and pet
The tabs Customer and Pet fully work

--- a/src/layout.css
+++ b/src/layout.css
@@ -220,7 +220,7 @@ width: 40%;
     display: inline;
 }
 
-.box {
+.box1 {
     text-align: center;
     color: #FFF;
     background-color: transparent;
